[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://enemy/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://StartPosition.gd" type="Script" id=4]
[ext_resource path="res://hud/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/art/House In a Forest Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/art/gameover.wav" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.0256348, 2.46704, 0, 0, 0, 0, 480.138, 1.80022, 0, 0, 0, 0, 481.471, 723.969, 0, 0, 0, 0, 1.35928, 724.636, 0, 0, 0, 0, 0.0256348, 2.46704 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 722.0
color = Color( 0.901961, 0.72549, 0.631373, 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
script = ExtResource( 4 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0.0256348, 2.46704 )
rotation = -0.00138887

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
[connection signal="hit" from="Player" to="." method="gameOver"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="newGame"]
